yamls/platform/federatordeployment.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "openidfederator-service"
  labels:
    prophecy.io/component: "openidfederator"
spec:
  ports:
  - protocol: "TCP"
    port: 5556
    targetPort: 5556
  selector:
    prophecy.io/component: "openidfederator"
  type: "LoadBalancer"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openidfederator
  labels:
    prophecy.io/component: "openidfederator"
spec:
  selector:
    matchLabels:
      prophecy.io/component: "openidfederator"
  template:
    metadata:
      labels:
        prophecy.io/component: "openidfederator"
    spec:
      imagePullSecrets:
      - name: prophecyregcred
      containers:
      - name: openidfederator
        image: gcr.io/prophecy-deployments/openidfederator:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5556
        volumeMounts:
        - mountPath: /etc/openidfederator
          name: federator-nfs-pv
      restartPolicy: Always
      volumes:
      - name: federator-nfs-pv
        persistentVolumeClaim:
          claimName: federator-nfs-pvc
